--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,9 @@
   "content_scripts": [
     {
       "matches": ["https://*.smartschool.be/*"],
-      "js": ["buis.js","main.js"],
+      "js": [
+        "achievement-scripts/buis.js",
+        "main-files/main.js"],
       "run_at": "document_end"
     }
   ],
