bug fix cuz something gave an error in console

--- a/manifest.json
+++ b/manifest.json
@@ -8,8 +8,7 @@
   },
   "permissions": [
     "storage",
-    "webRequest",
-    "webRequestBlocking"
+    "webRequest"
   ],
   "host_permissions": [
     "https://*.smartschool.be/*"
